test/message/esm_display_syntax_error_import_module.out
file:///*/test/fixtures/es-module-loaders/syntax-error-import.mjs:1
import { foo, notfound } from './module-named-exports.mjs';
              ^^^^^^^^
SyntaxError: The requested module './module-named-exports.mjs' does not provide an export named 'notfound'
    at ModuleLoader._instantiateModule (internal/modules/esm/module_loader.js:*:*)
    at ModuleLoader._instantiateAndEvaluate (internal/modules/esm/module_loader.js:*:*)
    at async ModuleLoader.importModule (internal/modules/esm/module_loader.js:*:*)
